# led-pattern-lab

./: .gitignore  CMakeLists.txt  DEPLOYMENT.md  HYBRID_DEV.md  README.md  env.example  idf_component.yml  index.html  package-lock.json  package.json  partitions.csv  sdkconfig.defaults  sdkconfig.old  tailwind.config.ts  vite.config.ts
main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
src/: App.tsx  index.css  vite-env.d.ts
src/components/: AnimationControls.tsx  AppSidebar.tsx  CollapsibleCard.tsx  ColorPicker.tsx  ColorWheel.tsx  EditorHeader.tsx  FilePreview.tsx  GifControls.tsx  GridControls.tsx  ImportExportPanel.tsx  LEDBox.tsx  LEDGrid.tsx  LEDGridCanvas.tsx  RecentColors.tsx  StorageUsageIndicator.tsx
src/components/ui/: alert-dialog.tsx  button.tsx  card.tsx  dialog.tsx  list.tsx  page-header.tsx  page-layout.tsx  sidebar.tsx  slider.tsx  toast.tsx
src/hooks/: useAnimationState.ts  useDataLoader.ts
src/lib/: file-storage.ts  image-utils.ts  mode-detector.ts  playlist-storage-adapter.ts  playlist-storage.ts  rest-storage.ts  storage-adapter.ts  websocket-storage.ts
src/pages/: FileManager.tsx  Index.tsx  LEDEditor.tsx  PlaylistEditor.tsx  PlaylistManager.tsx
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
web/src/components/: GridControls.tsx
web/src/lib/: image-utils.ts
